# substrate-parachain-exercise

./: .gitignore  Cargo.toml  README.md
custom-spec-files/: para-2000-genesis-state  para-2000-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/randomness/: Cargo.toml
pallets/randomness/src/: benchmarking.rs  mock.rs  tests.rs
pallets/sequencer/: Cargo.toml
pallets/sequencer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/staking/: Cargo.toml
pallets/staking/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
primitives/nimbus-primitives/: Cargo.toml
primitives/sequencer/: Cargo.toml
primitives/sequencer/src/: lib.rs
primitives/session-keys/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  pallets.rs
runtime/src/pallets/: sequencer.rs  staking.rs
zombienet/: zombienet.toml
