[package]
name = "pallet-randomness"
description = "Provides on-chain randomness"
homepage = "https://substrate.io"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
hex.workspace = true
log.workspace = true
# manta-primitives = { path = "../../primitives/manta", default-features = false }
# nimbus-primitives = { git = "https://github.com/manta-network/nimbus.git", tag = "v4.0.8", default-features = false }
codec.workspace = true
scale-info.workspace = true
serde = { workspace = true, optional = true }
# session-key-primitives = { path = '../../primitives/session-keys', default-features = false }
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
#   "nimbus-primitives/std",
#   "parity-scale-codec/std",
  "scale-info/std",
  "serde",
#   "session-key-primitives/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
