[package]
name = "pallet-sequencer"
description = "Pallet sequencer logic."
homepage = "https://substrate.io"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true }
scale-info.workspace = true

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-session.workspace = true
sp-core.workspace = true
sp-staking.workspace = true
sp-std.workspace = true

# Local
ep-sequencer.workspace = true

[dev-dependencies]
serde.workspace = true

# Substrate
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = [ "frame-support/try-runtime" ]
