[package]
name = "ep-sequencer"
version.workspace = true
authors.workspace = true
description = "Sequencer trait and type."
license.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

# Substrate
sp-api.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-staking.workspace = true
sp-std.workspace = true
frame-support.workspace = true

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
]
