[package]
name = "session-keys-primitives"
description = "Primitives for session keys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true, optional = true }
frame-support.workspace = true
nimbus-primitives.workspace = true
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-api.workspace = true
sp-application-crypto.workspace = true
sp-consensus-babe.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-keystore = { workspace = true, optional = true }
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = [ "std" ]
std = [
	"async-trait",
	"frame-support/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = []
